# clinfuse

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  claude.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
analysis/: requirements.txt  results.ipynb
analysis/notebooks/: augmentation_eda.ipynb  augmentation_eda_executed.ipynb  entity_resolution_evaluation.ipynb  entity_resolution_exploration.ipynb
augmentation/: Dockerfile  README.md  __main__.py
augmentation/cli/: augment.py  csv_to_parquet.py  inject_errors.py  segment.py
augmentation/config/: __init__.py  config_schema.py  (+1 more)
config/: scale_config.yaml  synthea.properties
docs/: IMPLEMENTATION_PLAN.md
entity-resolution/: Dockerfile  build_golden_records.py  requirements-runtime.txt  resolve.py  run_pipeline.py  train_scorer.py
entity_resolution/: Dockerfile  build_golden_records.py  evaluate_baselines.py  resolve.py
fine-tuning/: Dockerfile  Dockerfile.export  Dockerfile.infer  Dockerfile.prepare  Dockerfile.train  README.md  export_text_only_model.py  infer_remote.sh  inference_classifier.py  prepare_base_model.py  prepare_dataset.py  requirements-export.txt  requirements-infer.txt  requirements-prepare.txt  requirements-train.txt  run_on_runpod.sh  test_predictions.csv  train_classifier_on_gpu.py
fine-tuning-101/: export_text_only_model.py  inference_classifier.py  requirements-inference.txt
fine_tuning/: .dockerignore  .gitignore  Dockerfile  README.md  RUNPOD_GUIDE.md  _remote_helpers.sh  export_model.py  export_remote.sh  infer_classifier.py  infer_remote.sh  launch_pod.sh  requirements.txt  train_classifier.py  train_remote.sh
llm_classifier/: export_remote.sh  launch_pod.sh  prepare_dataset.py  promote_model.py  requirements-prepare.txt  train_classifier.py  train_remote.sh
paper/: Dockerfile  clinfuse.tex  docker-compose.yaml
runpod-gpu/: .env.template  README.md  requirements.txt
scripts/: 01_generate_base_population.py
shared/: data_loader.py  evaluation.py  ground_truth.py  medical_records.py  summarize.py
synthea_runner/: README.md
tests/: conftest.py  test_data_quality.py  test_duplicate_generator.py  test_error_injection.py  test_ground_truth.py  test_special_cases.py
(+50 files in other folders)
