[project]
name = "syntheticmass"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "augmentation*", "entity_resolution*"]
exclude = ["augmentation.tests*"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["fine_tuning", "synthea_runner"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E712"]


[tool.mypy]
python_version = "3.11"
warn_return_any = false
ignore_missing_imports = true
check_untyped_defs = true
implicit_optional = true
disable_error_code = ["var-annotated", "assignment", "arg-type", "call-overload", "return-value", "index", "operator", "misc", "has-type"]

[tool.pytest.ini_options]
testpaths = ["augmentation/tests", "entity_resolution/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
